--- a/project.yml
+++ b/project.yml
@@ -17,3 +17,9 @@ targets:
         UILaunchScreen: LaunchScreen
         CFBundleShortVersionString: "1.0.0"
         CFBundleVersion: "1"
+    dependencies:
+      - package: HorizonCalendar
+packages:
+  HorizonCalendar:
+    url: https://github.com/airbnb/HorizonCalendar
+    majorVersion: 1.16.0
