--- a/App/Info.plist
+++ b/App/Info.plist
@@ -18,6 +18,13 @@
 	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
+		<string>Poppins-Bold.ttf</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<string>LaunchScreen</string>
 </dict>
