--- a/App/Info.plist
+++ b/App/Info.plist
@@ -26,10 +26,10 @@
 	<string>tes speech</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Poppins-Bold</string>
-		<string>Poppins-Medium</string>
-		<string>Poppins-Regular</string>
-		<string>Poppins-SemiBold</string>
+		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
 	</array>
 	<key>UILaunchScreen</key>
 	<string>LaunchScreen</string>
